# Cipher

./: .dockerignore  .env.example  .gitignore  Cipher_Project_Layout.md  Cipher_Technical_Implementation_Checklist.md  Dockerfile  README.md  api_doc.md  docker-compose.yml  main.py  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py
apps/api/routes/: __init__.py  admin.py  assistant.py  calendar.py  dashboard.py  health.py  memory.py  notion.py  projects.py  reminders.py  tasks.py  voice.py
apps/cli/: __init__.py  main.py
apps/mcp/: __init__.py  server.py  tools.py
apps/worker/: main.py
config/: model-routing.yaml
core/: __init__.py  config.py
core/models/: __init__.py  assistant.py  entities.py
core/prompts/: __init__.py  assistant.py
core/repositories/: __init__.py  graph_repository.py
core/utils/: __init__.py  dates.py  recurrence.py
database/: __init__.py
database/neo4j/: __init__.py  client.py  constraints.cypher  schema.cypher
docs/: phase1_status.md  phase2_status.md  phase3_status.md
exports/: __init__.py  service.py
scripts/: __init__.py  apply_neo4j_schema.py  google_calendar_auth.py  neo4j_smoke_test.py  seed_sample_data.py
services/: __init__.py
services/assistant/: __init__.py  briefing.py  context.py  parser.py  service.py
services/calendar/: provider.py  service.py
services/llm/: __init__.py  factory.py  local_router.py  openai_provider.py  provider.py  routing.py
services/memory/: memos_client.py  service.py
services/notion/: __init__.py  service.py
services/projects/: service.py
services/reminders/: __init__.py  notifiers.py  scheduler.py  service.py
services/tasks/: service.py
services/voice/: __init__.py  service.py
storage/: __init__.py  sqlite.py
tests/: __init__.py  test_app_wiring.py  test_assistant_phase3.py  test_calendar_and_briefing.py  test_error_handlers.py  test_exports.py  test_graph_repository.py  test_health.py  test_model_routing.py  test_openai_provider.py  test_parser_service.py  test_recurrence.py  test_reminder_scheduler.py  test_sqlite_repository.py  test_task_reminder_routes.py  test_voice_bridge.py
