[project]
name = "cipher"
version = "0.1.0"
description = "Local-first personal assistant backend built with FastAPI, MemOS, and Hermes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi>=0.116.1,<0.117",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mcp>=1.21.1",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "typer>=0.16.1",
    "uvicorn[standard]>=0.36.0",
]

[project.scripts]
cipher = "apps.cli.main:main"
cipher-api = "apps.api.main:run"
cipher-mcp = "apps.mcp.server:run"
cipher-google-calendar-auth = "scripts.google_calendar_auth:main"
cipher-worker = "apps.worker.main:run"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "core", "exports", "scripts", "services", "storage"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]
